2008-09-17  Stefan Monnier  <monnier@iro.umontreal.ca>

	* composite.c (Fcomposition_get_gstring): Yet another int/Lisp_Oject
	mixup (YAILOM).

2008-09-17  Chong Yidong  <cyd@stupidchicken.com>

	* indent.c (Fvertical_motion): Use position reported by iterator
	instead of PT for determining screen motion (bug#943).

2008-09-17  Romain Francoise  <romain@orebokech.com>

	* composite.c (composition_adjust_point): Fix int/EMACS_INT mixup.

2008-09-17  Kenichi Handa  <handa@m17n.org>

	* ftfont.c (ftfont_shape_by_flt): Downcase family name.

	* composite.c (Fcomposition_get_gstring): Make bigger gstring_work
	if necessary.

2008-09-16  Kenichi Handa  <handa@m17n.org>

	* coding.c (make_conversion_work_buffer): Avoid calling
	Fget_buffer_create if it is not necessary.

2008-09-15  Martin Rudalics  <rudalics@gmx.at>

	* window.c (Fselect_window): Don't update window_select_count and
	use_time when norecord is not nil.

2008-09-14  Kenichi Handa  <handa@m17n.org>

	* fileio.c (Finsert_file_contents): Delete incorrect decrement of
	specpdl_ptr.

2008-09-12  Kenichi Handa  <handa@m17n.org>

	* indent.c (scan_for_column): Don't handle automatic composition
	if the current buffer is not associated with a window.

	* composite.c (composition_reseat_it): If the current buffer is
	not associated with a window, ignore the automatic composition.
	(find_automatic_composition): Likewise.

2008-09-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* term.c (close_gpm): New fun extracted from Fgpm_mouse_stop.
	(Fgpm_mouse_stop): Use it.
	* termhooks.h (close_gpm): Declare.
	* keyboard.c (tty_read_avail_input): Forcefully close the gpm
	connection if Gpm_GetEvent fails.

	* window.c (set_window_buffer): Always preserve current-buffer.

2008-09-12  Glenn Morris  <rgm@gnu.org>

	* charset.c (init_charset): Warn if etc/charsets not found.  (Bug#909)

2008-09-11  Glenn Morris  <rgm@gnu.org>

	* charset.c (charset-map-path): Doc fix.

2008-09-10  Kenichi Handa  <handa@m17n.org>
